# Actix1

./: .gitignore  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2020-02-16-133728_create_users/: up.sql
backend/migrations/2020-02-16-164453_create_games/: up.sql
backend/migrations/2020-02-16-192930_create_usergame/: down.sql  up.sql
backend/src/: actions.rs  actors.rs  main.rs  models.rs  schema.rs
backend/src/database/: actions.rs  mod.rs  models.rs  schema.rs
front/: Dockerfile  package-lock.json  package.json
front/src/: App.js  Game.js
